--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,82 +5,85 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-sans:
+        "IBM Plex Sans", ui-sans-serif, system-ui, sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+        "Noto Color Emoji";
 
-  --font-serif: "Merriweather", system-ui;
+    --font-serif: "Merriweather", system-ui;
 }
 
 @layer components {
+    .logo-ring {
+        @apply h-[120px] w-[120px];
+    }
 
-  .logo-ring {
-    @apply h-[120px] w-[120px];
-  }
+    .logo-ring-mobile {
+        @apply h-[90px] w-[90px];
+    }
 
-  .logo-ring-mobile {
-    @apply h-[90px] w-[90px];
-  }
+    .nav-item-aux {
+        @apply md:text-base text-sm underline decoration-4;
+    }
 
-  .nav-item-aux {
-    @apply md:text-base text-sm underline decoration-4;
-  }
+    .nav-item {
+        @apply flex items-center gap-2 md:mt-4 md:text-lg;
+    }
+    .nav-square {
+        @apply h-[1.25em] w-[1.25em] shrink-0 rounded-md;
+    }
 
-  .nav-item {
-    @apply flex items-center gap-2 text-[1.125em] md:mt-4 md:text-lg;
-  }
-  .nav-square {
-    @apply h-[1.25em] w-[1.25em] shrink-0 rounded-md;
-  }
+    .page-shell {
+        @apply flex min-h-[100svh] flex-col justify-between bg-amber-100/15 px-12 pt-8 pb-0;
+    }
+    .main-col {
+        @apply mx-auto max-w-[700px];
+    }
 
-  .page-shell {
-    @apply flex min-h-[100svh] flex-col justify-between bg-amber-100/15 px-12 pt-8 pb-0;
-  }
-  .main-col {
-    @apply mx-auto max-w-[700px];
-  }
+    .nav-header {
+        @apply mb-4 justify-end flex flex-wrap gap-4 gap-y-1 font-mono;
+    }
 
-  .page-title {
-    @apply flex flex-1 text-5xl font-bold;
-  }
+    .page-title {
+        @apply flex flex-1 text-5xl font-bold;
+    }
 
-  .blog-year-list {
-    @apply my-1 hidden font-mono md:top-4 md:block md:pr-6 md:text-right;
-  }
-  .blog-list {
-    @apply border-slate-800/70 pb-8 md:min-w-0 md:flex-grow md:border-l-[2px] md:pl-6;
-  }
+    .blog-year-list {
+        @apply my-1 hidden font-mono md:top-4 md:block md:pr-6 md:text-right;
+    }
+    .blog-list {
+        @apply border-slate-800/70 pb-8 md:min-w-0 md:flex-grow md:border-l-[2px] md:pl-6;
+    }
 
-  .blog-year-header {
-    @apply text-xl font-bold tracking-tighter;
-  }
+    .blog-year-header {
+        @apply text-xl font-bold tracking-tighter;
+    }
 
-  .blog-list-post-container {
-    @apply clear-both mt-1.5 mb-8;
-  }
+    .blog-list-post-container {
+        @apply clear-both mt-1.5 mb-8;
+    }
 
-  .blog-list-post-title {
-    @apply border-b-[1px] border-b-slate-700 font-semibold hover:border-b-[2px];
-  }
+    .blog-list-post-title {
+        @apply border-b-[1px] border-b-slate-700 font-semibold hover:border-b-[2px];
+    }
 
-  .blog-list-post-date {
-    @apply ml-0.5 text-[0.825em] text-slate-500 italic;
-  }
+    .blog-list-post-date {
+        @apply ml-0.5 text-[0.825em] text-slate-500 italic;
+    }
 
-  .blog-list-post-description {
-    @apply font-serif leading-7;
-  }
+    .blog-list-post-description {
+        @apply font-serif leading-7;
+    }
 
-  .now-date-header {
-    @apply text-xl font-bold tracking-tighter;
-  }
+    .now-date-header {
+        @apply text-xl font-bold tracking-tighter;
+    }
 
-  .project-link {
-    @apply underline text-blue-500 decoration-blue-500
-  }
+    .project-link {
+        @apply font-mono font-semibold underline text-blue-500 decoration-blue-500;
+    }
 
-  .linkroll-link {
-    @apply text-red-600/70 underline decoration-red-300 font-bold
-  }
-
+    .linkroll-link {
+        @apply text-red-600/70 underline decoration-red-300 font-bold;
+    }
 }
-
