--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,13 +1,37 @@
+/* manrope-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/manrope-v15-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* manrope-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../assets/fonts/manrope-v15-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* manrope-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../assets/fonts/manrope-v15-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 @import "tailwindcss";
 
 @theme {
-	--font-headline: Arial;
-    --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	--font-family: var(--font-sans);
+	--font-sans: 'Manrope', ui-sans-serif,system-ui,sans-serif, Roboto, Helvetica, Arial,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 
     --font-serif: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
 
 	--breakpoint-xs: 24rem;
-
 }
 
 @layer components {
@@ -16,12 +40,6 @@
 		@apply leading-[1.4];
 		@apply tracking-[-0.05px];
 		word-spacing: -1.35px;
-	}
-
-	.styled-sans {
-		@apply font-sans;
-		@apply leading-[1.5];
-		word-spacing: -0.75px;
 	}
 
 	.header-icon {
@@ -40,10 +58,36 @@
     }
 
     .nav-item {
-        @apply flex items-center gap-2 md:mt-2.5 md:text-lg;
+        @apply flex items-center gap-2 md:mt-1.5 md:text-lg;
     }
+
+	.nav-item:not(:last-child)::after {
+	@apply md:hidden;	
+	  content: "";
+	  transform: rotate(15deg); 
+	  width: 2.75px; 
+	  height: 65%; 
+	}
+
+	.slash-green::after {
+		@apply bg-green-700;
+	}
+
+	.slash-limegreen::after {
+		@apply bg-lime-600;
+	}
+
+	.slash-yellow::after {
+		@apply bg-yellow-500;
+	}
+
+	.slash-pink::after {
+		@apply bg-red-400;
+	}
+
+
     .nav-square {
-        @apply h-[1.25em] w-[1.25em] shrink-0 rounded-md;
+        @apply hidden md:block h-[1.25em] w-[1.25em] shrink-0 rounded-md;
     }
 
     .page-shell {
@@ -78,7 +122,7 @@
     }
 
     .blog-list-post-title {
-        @apply border-b-[1px] border-b-slate-700 font-semibold hover:border-b-[2px];
+        @apply border-b-[2px] text-lg border-b-slate-700 font-semibold hover:border-b-[3px];
     }
 
     .blog-list-post-date {
@@ -86,7 +130,7 @@
     }
 
     .blog-list-post-description {
-        @apply text-[18.5px] leading-7;
+        @apply leading-7;
     }
 
     .now-date-header {
@@ -94,7 +138,7 @@
     }
 
     .project-link {
-        @apply font-mono font-semibold underline text-blue-500 decoration-blue-500;
+        @apply font-semibold text-lg underline text-blue-500 decoration-blue-500;
     }
 
     .linkroll-link {
