added new NOW entry

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -175,6 +175,10 @@
     .project-link {
         @apply font-semibold text-lg underline text-blue-500 decoration-blue-500;
     }
+	
+	.link {
+		@apply underline text-blue-500
+	}
 
     .linkroll-link {
         @apply text-red-600/70 underline decoration-red-300 font-bold;
