tidied up some css with links

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -177,7 +177,7 @@
     }
 
 	.link {
-		@apply underline text-blue-500
+		@apply underline text-blue-500 underline-offset-2;
 	}
 
     .linkroll-link {
