--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,28 +1,3 @@
-/* manrope-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../assets/fonts/manrope-v15-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* manrope-600 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 600;
-  src: url('../assets/fonts/manrope-v15-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* manrope-700 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Manrope';
-  font-style: normal;
-  font-weight: 700;
-  src: url('../assets/fonts/manrope-v15-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-
 /* inter-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -100,6 +75,10 @@
   .stagger > *:nth-child(8) { animation-delay: 350ms; }
 }
 
+body {
+	background-color: #f8f8f8;
+	color: #101010;
+}
 
 @layer components {
   .styled-serif {
@@ -159,11 +138,11 @@
     }
 
     .page-shell {
-        @apply flex min-h-[100svh] flex-col justify-between bg-[#f8f8f8] px-8 md:py-12 py-8 pb-0;
+        @apply flex min-h-[100svh] flex-col justify-between p-8 md:py-12;
     }
 
     .main-col {
-        @apply mx-auto max-w-[780px];
+        @apply mx-auto max-w-[780px] pb-4;
     }
 
     .nav-header {
