--- a/src/css/app.css
+++ b/src/css/app.css
@@ -35,7 +35,7 @@
 
 @theme {
 	--font-family: var(--font-sans);
-	--font-sans: 'Inter', 'Manrope', ui-sans-serif,system-ui,sans-serif, Roboto, Helvetica, Arial,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+	--font-sans: 'Inter', ui-sans-serif,system-ui,sans-serif, Roboto, Helvetica, Arial,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 
     --font-serif: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
 
@@ -163,16 +163,18 @@ body {
 
     .blog-year-header {
         @apply text-2xl font-semibold md:text-[1.8em] tracking-tighter;
-		@apply text-slate-900/80 leading-12;
+		@apply text-[#323232] leading-12;
     }
 
     .blog-list-post-container {
-        @apply clear-both mt-1.5 mb-4;
+        @apply clear-both mb-3;
 		@apply leading-none flex items-baseline gap-x-3;
     }
 
     .blog-list-post-title {
-        @apply text-[1.1em] md:text-[1.5em] font-semibold text-slate-900/80; 
+        @apply text-[1.1em] md:text-[1.5em] font-semibold text-[#323232]; 
+		@apply hover:bg-[#323232] hover:text-[#f8f8f8] rounded-md px-1.5;
+		line-height: 1.3;
 		word-spacing: 2px;
     }
 
