--- a/src/css/app.css
+++ b/src/css/app.css
@@ -76,7 +76,7 @@
 }
 
 body {
-	background-color: #f8f8f8;
+	background-color: #fefcf8;
 	color: #101010;
 }
 
@@ -106,8 +106,7 @@ body {
     }
 
     .nav-item {
-        @apply flex items-center gap-2 md:mt-1 text-[1.05em] md:text-[1.25em];
-		@apply hover:underline hover:decoration-3;
+        @apply flex items-center gap-1 md:gap-2 md:mt-1 text-[1.15em] md:text-[1.25em];
     }
 
     .nav-square {
